docs: try to fix flickering

--- a/packages/docs/src/prism.scss
+++ b/packages/docs/src/prism.scss
@@ -4,7 +4,6 @@ code[class*="language-"],
 pre[class*="language-"] {
 	background: hsl(220, 13%, 18%);
 	color: hsl(220, 14%, 71%);
-	text-shadow: 0 1px rgba(0, 0, 0, 0.3);
 	font-family: "Fira Code", "Fira Mono", Menlo, Consolas, "DejaVu Sans Mono", monospace;
 	direction: ltr;
 	text-align: left;
@@ -27,7 +26,6 @@ code[class*="language-"] *::-moz-selection,
 pre[class*="language-"] *::-moz-selection {
 	background: hsl(220, 13%, 28%);
 	color: inherit;
-	text-shadow: none;
 }
 
 code[class*="language-"]::selection,
